--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,1 +1,6 @@
-admin.password = 1234
+app.admin.password=admin0987
+
+mysql.db.name=tgp
+mysql.db.user=root
+mysql.db.password=root1234
+mysql.db.port=3306
