--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,10 @@ task copyDependencies(type: Copy) {
 
 dependencies {
     compile group: 'com.github.sarxos', name: 'webcam-capture', version : '0.3.10'
-    compile group: 'com.h2database', name: 'h2', version: '1.4.193'
     compile group: 'org.jdbi', name: 'jdbi', version: '2.77'
     compile group: 'com.lowagie', name: 'itext', version: '2.1.7'
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
     compile group: 'org.freemarker', name:'freemarker', version: '2.3.14'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.44'
+
 }
